<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="start">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/toolMain"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtValorConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/valor_conta"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolMain" />

    <EditText
        android:id="@+id/inputValorConta"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtValorConta"
        app:layout_constraintStart_toEndOf="@+id/txtValorConta"
        app:layout_constraintTop_toTopOf="@+id/txtValorConta" />

    <TextView
        android:id="@+id/txtQualidadeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/qualidade_servico"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/txtValorConta"
        app:layout_constraintTop_toBottomOf="@+id/txtValorConta" />

    <RadioGroup
        android:id="@+id/radioGroupServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtQualidadeServico"
        app:layout_constraintTop_toBottomOf="@+id/txtQualidadeServico">

        <RadioButton
            android:id="@+id/radioExcelente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excelente"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/txtQualidadeServico"
            app:layout_constraintTop_toBottomOf="@+id/txtQualidadeServico" />

        <RadioButton
            android:id="@+id/radioBom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/radioExcelente"
            app:layout_constraintTop_toBottomOf="@+id/radioExcelente" />

        <RadioButton
            android:id="@+id/radioRuim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruim"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/radioBom"
            app:layout_constraintTop_toBottomOf="@+id/radioBom" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtNumeroPessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_pessoas"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroupServico"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupServico" />

    <EditText
        android:id="@+id/inputNumeroPessoas"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumeroPessoas"
        app:layout_constraintStart_toEndOf="@+id/txtNumeroPessoas"
        app:layout_constraintTop_toTopOf="@+id/txtNumeroPessoas" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="25sp"
        app:cornerRadius="15dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroPessoas" />

</androidx.constraintlayout.widget.ConstraintLayout>